@@ -1,5 +1,6 @@
 
 0.03  2013-02-08
+  - Added command_error and query_failure methods to Mango::Protocol.
   - Improved tests.
   - Fixed small exception handling bugs in Mango.
 
